<resources>
    <!--Titles-->
    <string name="title_rivera">CERVEZAS HIJOS DE RIVERA</string>
    <string name="title_importacion">CERVEZAS DE importación</string>
    <string name="title_aguas">AGUAS</string>
    <string name="title_vino">VINO / LICORES</string>
    <string name="title_refrescos">REFRESCOS / ZUMOS / BATIDOS</string>
    <string name="title_sidras">SIDRAS</string>
    <string name="tltle_energetical">energéticas</string>
    <string name="tltle_incio">INICIO</string>
    <string name="tltle_envios">ENVIOS PENDIENTES</string>


    <string name="app_name">Galicia</string>
    <string name="action_settings">Settings</string>
    <string name="title">Estrella Galicia - SDK Sample</string>
    <string name="header_label">Contador</string>
    <string name="counter_value">0</string>
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>
    <string name="button_reset">Reset</string>
    <string name="webservice_label">WebServcice Data:</string>
    <string name="button_webservice">Download</string>
    <string name="button_webservice_appconfig">Read content</string>
    <string name="locales_shopping">LOCALES</string>
    <string name="guardar_shopping">GUARDAR</string>
    <string name="version">0.1</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_accept">Aceptar</string>
    <string-array name="spinner_resource">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
    </string-array>

    <string name="download">Download..</string>


    <string name="hello_world">Hello world!</string>
    <string name="click_back">Please click BACK again to exit</string>

    <string name="hardcod_text">

        Цей Закон визначає основні положення щодо реалізації конституційного права працівників на охорону їх життя і здоров'я у процесі трудової діяльності, на належні, безпечні і здорові умови праці, регулює за участю відповідних органів державної влади відносини між роботодавцем і працівником з питань безпеки, гігієни праці та виробничого середовища і встановлює єдиний порядок організації охорони праці в Україні.
        Розділ I
        ЗАГАЛЬНІ ПОЛОЖЕННЯ
        Стаття 1. Визначення понять і термінів
        Охорона праці - це система правових, соціально-економічних, організаційно-технічних, санітарно-гігієнічних і лікувально-профілактичних заходів та засобів, спрямованих на збереження життя, здоров'я і працездатності людини у процесі трудової діяльності.
        Роботодавець - власник підприємства, установи, організації або уповноважений ним орган, незалежно від форм власності, виду діяльності, господарювання, і фізична особа, яка використовує найману працю.
        Працівник - особа, яка працює на підприємстві, в організації, установі та виконує обов'язки або функції згідно з трудовим договором (контрактом).
        Стаття 2. Сфера дії Закону
        Дія цього Закону поширюється на всіх юридичних та фізичних осіб, які відповідно до законодавства використовують найману працю, та на всіх працюючих.
        Стаття 3. Законодавство про охорону праці
        Законодавство про охорону праці складається з цього Закону, Кодексу законів про працю України, Закону України "Про загальнообов'язкове державне соціальне страхування від нещасного випадку на виробництві та професійного захворювання, які спричинили втрату працездатності" та прийнятих відповідно до них нормативно-правових актів.
        Якщо міжнародним договором, згода на обов'язковість якого надана Верховною Радою України, встановлено інші норми, ніж ті, що передбачені законодавством України про охорону праці, застосовуються норми міжнародного договору.
        Стаття 4. Державна політика в галузі охорони праці
        Державна політика в галузі охорони праці визначається відповідно до Конституції України Верховною Радою України і спрямована на створення належних, безпечних і здорових умов праці, запобігання нещасним випадкам та професійним захворюванням.
        Державна політика в галузі охорони праці базується на принципах:
        пріоритету життя і здоров'я працівників, повної відповідальності роботодавця за створення належних, безпечних і здорових умов праці;
        підвищення рівня промислової безпеки шляхом забезпечення суцільного технічного контролю за станом виробництв, технологій та продукції, а також сприяння підприємствам у створенні безпечних та нешкідливих умов праці;
        комплексного розв'язання завдань охорони праці на основі загальнодержавної, галузевих, регіональних програм з цього питання та з урахуванням інших напрямів економічної і соціальної політики, досягнень в галузі науки і техніки та охорони довкілля;
        соціального захисту працівників, повного відшкодування шкоди особам, які потерпіли від нещасних випадків на виробництві та професійних захворювань;
        встановлення єдиних вимог з охорони праці для всіх підприємств та суб'єктів підприємницької діяльності незалежно від форм власності та видів діяльності;
        адаптації трудових процесів до можливостей працівника з урахуванням його здоров'я та психологічного стану;
        використання економічних методів управління охороною праці, участі держави у фінансуванні заходів щодо охорони праці, залучення добровільних внесків та інших надходжень на ці цілі, отримання яких не суперечить законодавству;
        інформування населення, проведення навчання, професійної підготовки і підвищення кваліфікації працівників з питань охорони праці;
        забезпечення координації діяльності органів державної влади, установ, організацій, об'єднань громадян, що розв'язують проблеми охорони здоров'я, гігієни та безпеки праці, а також співробітництва і проведення консультацій між роботодавцями та працівниками (їх представниками), між усіма соціальними групами під час прийняття рішень з охорони праці на місцевому та державному рівнях;
        використання світового досвіду організації роботи щодо поліпшення умов і підвищення безпеки праці на основі міжнародного співробітництва.
        Розділ II
        ГАРАНТІЇ ПРАВ НА ОХОРОНУ ПРАЦІ
        Стаття 5. Права на охорону праці під час укладання трудового договору
        Умови трудового договору не можуть містити положень, що суперечать законам та іншим нормативно-правовим актам з охорони праці.
        Під час укладання трудового договору роботодавець повинен проінформувати працівника під розписку про умови праці та про наявність на його робочому місці небезпечних і шкідливих виробничих факторів, які ще не усунуто, можливі наслідки їх впливу на здоров'я та про права працівника на пільги і компенсації за роботу в таких умовах відповідно до законодавства і колективного договору.
        Працівнику не може пропонуватися робота, яка за медичним висновком протипоказана йому за станом здоров'я. До виконання робіт підвищеної небезпеки та тих, що потребують професійного добору, допускаються особи за наявності висновку психофізіологічної експертизи.
        Усі працівники згідно із законом підлягають загальнообов'язковому державному соціальному страхуванню від нещасного випадку на виробництві та професійного захворювання, які спричинили втрату працездатності.
        Стаття 6. Права працівників на охорону праці під час роботи
        Умови праці на робочому місці, безпека технологічних процесів, машин, механізмів, устаткування та інших засобів виробництва, стан засобів колективного та індивідуального захисту, що використовуються працівником, а також санітарно-побутові умови повинні відповідати вимогам законодавства.
        Працівник має право відмовитися від дорученої роботи, якщо створилася виробнича ситуація, небезпечна для його життя чи здоров'я або для людей, які його оточують, або для виробничого середовища чи довкілля. Він зобов'язаний негайно повідомити про це безпосереднього керівника або роботодавця. Факт наявності такої ситуації за необхідності підтверджується спеціалістами з охорони праці підприємства за участю представника профспілки, членом якої він є, або уповноваженої працівниками особи з питань охорони праці (якщо професійна спілка на підприємстві не створювалася), а також страхового експерта з охорони праці.
        За період простою з причин, передбачених частиною другою цієї статті, які виникли не з вини працівника, за ним зберігається середній заробіток.
        Працівник має право розірвати трудовий договір за власним бажанням, якщо роботодавець не виконує законодавства про охорону праці, не додержується умов колективного договору з цих питань. У цьому разі працівникові виплачується вихідна допомога в розмірі, передбаченому колективним договором, але не менше тримісячного заробітку.
        Працівника, який за станом здоров'я відповідно до медичного висновку потребує надання легшої роботи, роботодавець повинен перевести за згодою працівника на таку роботу на термін, зазначений у медичному висновку, і у разі потреби встановити скорочений робочий день та організувати проведення навчання працівника з набуття іншої професії відповідно до законодавства.
        На час зупинення експлуатації підприємства, цеху, дільниці, окремого виробництва або устаткування органом державного нагляду за охороною праці чи службою охорони праці за працівником зберігаються місце роботи, а також середній заробіток.
        Стаття 7. Право працівників на пільги і компенсації за важкі та шкідливі умови праці
        Працівники, зайняті на роботах з важкими та шкідливими умовами праці, безоплатно забезпечуються лікувально-профілактичним харчуванням, молоком або рівноцінними харчовими продуктами, газованою солоною водою, мають право на оплачувані перерви санітарно-оздоровчого призначення, скорочення тривалості робочого часу, додаткову оплачувану відпустку, пільгову пенсію, оплату праці у підвищеному розмірі та інші пільги і компенсації, що надаються в порядку, визначеному законодавством.
        У разі роз'їзного характеру роботи працівникові виплачується грошова компенсація на придбання лікувально-профілактичного харчування, молока або рівноцінних йому харчових продуктів на умовах, передбачених колективним договором.
        Роботодавець може за свої кошти додатково встановлювати за колективним договором (угодою, трудовим договором) працівникові пільги і компенсації, не передбачені законодавством.  </string>
</resources>